--- a/bower.json
+++ b/bower.json
@@ -23,10 +23,11 @@
     "angular-smart-table": "~1.4.12",
     "angular-bootstrap": "~0.12.1",
     "velocity": "~1.2.2",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "ngDialog": "~0.4.0"
   },
   "resolutions": {
-    "angular": ">=1 <1.3.0",
+    "angular": "1.3.15",
     "angular-local-storage": "~0.2.0"
   }
 }
