--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "fb": "^0.7.0",
     "method-override": "^2.3.1",
     "moment": "^2.9.0",
-    "mongoose": "~3.8.x",
+    "mongoose": "^3.8.13",
     "morgan": "~1.3.0",
     "multer": "^0.1.7",
     "node-uuid": "^1.4.2",
