--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular": "~1.3.8",
     "bootstrap": "~3.3.1",
     "angular-ui-router": "~0.2.13",
+    "angular-bootstrap-datetimepicker": "latest",
     "angular-route": "~1.3.8",
     "html5shiv": "~3.7.2",
     "angular-local-storage": "~0.2.0",
@@ -27,7 +28,7 @@
     "ngDialog": "~0.4.0"
   },
   "resolutions": {
-    "angular": "1.3.15",
+    "angular": "1.4.0",
     "angular-local-storage": "~0.2.0"
   }
 }
