--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "angular-bootstrap": "~0.12.1",
     "velocity": "~1.2.2",
     "font-awesome": "~4.3.0",
-    "ngDialog": "~0.4.0"
+    "ngDialog": "~0.4.0",
+    "underscore": "~1.8.3"
   },
   "resolutions": {
     "angular": "1.4.0",
