--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cron": "^1.0.9",
     "crypto": "0.0.3",
     "debug": "^2.1.1",
+    "deepcopy": "^0.5.0",
     "dotenv": "^0.4.0",
     "ejs": "~0.8.5",
     "express": "~4.9.0",
