--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-local": "^1.0.0",
+    "purify-css": "^1.0.10",
     "request": "^2.53.0",
     "socket.io": "^1.3.5",
     "validator": "^3.33.0"
