--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
     "underscore": "~1.8.3"
   },
   "resolutions": {
-    "angular": "1.4.0",
+    "angular": "~1.3.8",
     "angular-local-storage": "~0.2.0"
   }
 }
