--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "velocity": "~1.2.2",
     "font-awesome": "~4.3.0",
     "ngDialog": "~0.4.0",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "async": "~1.3.0"
   },
   "resolutions": {
     "angular": "~1.3.8",
