--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
-    "start": "nodemon ./server/app.js"
+    "start": "node ./server/app.js"
   },
   "dependencies": {
     "assert": "^1.3.0",
