--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "~4.9.0",
     "express-session": "^1.10.1",
     "fb": "^0.7.0",
+    "mailgun-js": "^0.7.1",
     "method-override": "^2.3.1",
     "moment": "^2.9.0",
     "mongoose": "^3.8.13",
