--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^3.8.13",
     "morgan": "~1.3.0",
     "multer": "^0.1.7",
+    "newrelic": "^1.21.1",
     "node-uuid": "^1.4.2",
     "nodemailer": "^1.3.0",
     "opentok": "^2.2.4",
