--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "mailgun-js": "^0.7.1",
     "method-override": "^2.3.1",
     "moment": "^2.9.0",
-    "mongoose": "^3.8.13",
+    "mongoose": "3.8.x",
     "morgan": "~1.3.0",
     "multer": "^0.1.7",
     "newrelic": "^1.21.1",
