--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-local": "^1.0.0",
+    "password-generator": "^1.0.0",
     "request": "^2.53.0",
     "serve-favicon": "^2.3.0",
     "validator": "^3.33.0"
