--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "~1.8.1",
     "colors": "^1.0.3",
     "compression": "^1.3.0",
+    "connect-mongo": "^0.8.2",
     "cookie-parser": "~1.3.3",
     "cors": "^2.5.3",
     "cron": "^1.0.9",
@@ -35,7 +36,7 @@
     "morgan": "~1.3.0",
     "multer": "^0.1.7",
     "newrelic": "^1.21.1",
-    "node-uuid": "^1.4.2",
+    "node-uuid": "^1.4.3",
     "nodemailer": "^1.3.0",
     "opentok": "^2.2.4",
     "passport": "^0.2.1",
